Added from post param and it checking for correct redirection.

--- a/cu-stories/includes/tpl/general-settings.html
+++ b/cu-stories/includes/tpl/general-settings.html
@@ -291,6 +291,7 @@
 		<input type="hidden" name="action" value="update" /> <input
 			type="hidden" name="page_options"
 			value="new_option_name,some_other_option,option_etc" />
+			<input type="hidden" name="from" value="stories">
 	</form>
 </body>
 </html>
