SWP-42: API settings page modified URL field added, user field removed

--- a/cu-stories/includes/tpl/settings.html
+++ b/cu-stories/includes/tpl/settings.html
@@ -17,9 +17,9 @@
 			<table class="form-table">
 
 				<tr valign="top">
-					<th scope="row">API User</th>
-					<td><input type="text" name="custory_api_user" class="regular-text code"
-							   value="<?php echo get_option('custory_api_user'); ?>" /></td>
+					<th scope="row">API Base URL</th>
+					<td><input type="text" name="custory_api_url" class="regular-text code"
+							   value="<?php echo get_option('custory_api_url'); ?>" /></td>
 				</tr>
 
 				<tr valign="top">
