SWP-19: changing titles of settings sections

--- a/cu-stories/includes/tpl/settings.html
+++ b/cu-stories/includes/tpl/settings.html
@@ -95,8 +95,7 @@
 			</table>
 		</div>
 		<div class="section">
-			<h3 class="itemtitle">Data Mapping: stori.es Profile to
-				WordPress User</h3>
+			<h3 class="itemtitle">stori.es User Synchronization</h3>
 			<table class="form-table">
 				<tr valign="top">
 					<th scope="row">Create Users</th>
@@ -165,8 +164,7 @@
 			</table>
 		</div>
 		<div class="section">
-			<h3 class="itemtitle">Data Mapping: stori.es Story to WordPress
-				(Custom) Post</h3>
+			<h3 class="itemtitle">stori.es Story Synchronization</h3>
 			<table class="form-table">
 				<tr valign="top">
 					<th scope="row">Post Type</th>
