--- a/includes/tpl/settings.html
+++ b/includes/tpl/settings.html
@@ -143,7 +143,14 @@
 			<h3 class="itemtitle">Synchronization Controls</h3>
 			<table class="form-table">
 				<tr valign="top">
-					<th scope="row">Refresh Rate</th>
+					<th scope="row">Immediate Synchronization</th>
+					<td><input type="button" class="button button-secondary"
+						name="custory_synch_now" value="Sync Now" onclick="actionSyncNow();"/>
+						<span id="sync_now_status">&nbsp;</span>
+					</td>
+				</tr>
+				<tr valign="top">
+					<th scope="row">Schedule Synchronization</th>
 					<td><select id="custory_refresh_rate_id" name="custory_refresh_rate">
 							<option value="<?php echo get_option('custory_refresh_rate') ?>"
 								SELECTED>
@@ -154,6 +161,7 @@
 					</td>
 				</tr>
 				<tr valign="top">
+					<th scope="row">&nbsp;</th>
 					<td><input type="button" class="button button-secondary"
 						name="custory_synch_start" value="Start" onclick="actionStartSync();"/> &nbsp;
 						<input type="button" class="button button-secondary"
