SWP-81: ensuring TextContentBlock div expands to contain image

--- a/includes/css/stori_es-public.css
+++ b/includes/css/stori_es-public.css
@@ -19,7 +19,7 @@
 }
 
 .stori_es-story-content {}
-.stori_es-story-content-text {}
+.stori_es-story-content-text { overflow: auto; }
 .stori_es-story-content-text-image {}
 
 .stori_es-story-image {}
