--- a/includes/css/stori_es-public.css
+++ b/includes/css/stori_es-public.css
@@ -42,3 +42,18 @@
   font-style: italic;
   font-size: smaller;
 }
+
+.stori_es-story-content-video {}
+
+.stori_es-story-content-video iframe {
+  margin: auto;
+}
+
+.stori_es-story-content-video-title {
+  font-weight: bold;
+}
+
+.stori_es-story-content-video-caption {
+  font-style: italic;
+  font-size: smaller;
+}
