SWP-82: modifying the video content block container width

--- a/includes/css/stori_es-public.css
+++ b/includes/css/stori_es-public.css
@@ -43,9 +43,8 @@
   font-size: smaller;
 }
 
-.stori_es-story-content-video {}
-
-.stori_es-story-content-video iframe {
+.stori_es-story-content-video {
+  width: 420px;
   margin: auto;
 }
 
