SWP-82: adding some space around the video content block

--- a/includes/css/stori_es-public.css
+++ b/includes/css/stori_es-public.css
@@ -45,7 +45,7 @@
 
 .stori_es-story-content-video {
   width: 420px;
-  margin: auto;
+  margin: 10px auto;
 }
 
 .stori_es-story-content-video-title {
