--- a/includes/tpl/settings.html
+++ b/includes/tpl/settings.html
@@ -14,27 +14,43 @@
 
 				<tr valign="top">
 					<th scope="row">API Base URL</th>
-					<td><input id="custory_api_url_id" type="text" name="stori_es_api_url" class="regular-text code"
-							   value="<?php echo get_option('stori_es_api_url'); ?>"
-							   onkeypress="return checkAPISection(event);"
-								 onblur="return checkAPISection(event);" />
+					<td>
+						<input id="custory_api_url_id" name="stori_es_api_url"
+						    type="text"
+							  value="<?php echo get_option('stori_es_api_url'); ?>"
+							  onkeypress="return checkAPISection(event);"
+								onblur="return checkAPISection(event);"
+								class="regular-text code" />
 						<img id="process_id_apiurl" class="process_check"
-							 src="<?php echo STORI_ES_URL . '/includes/img/process-64.gif' ?>"
-							 alt="process indicator" />
+							  src="<?php echo STORI_ES_URL . '/includes/img/process-64.gif' ?>"
+							  alt="process indicator" />
 						<label id="check_result_apiurl" class="check_result"></label>
 					</td>
 				</tr>
 
 				<tr valign="top">
 					<th scope="row">API Key</th>
-					<td><input id="custory_api_key_id" type="text" name="stori_es_api_key" class="regular-text code"
-							   value="<?php echo get_option('stori_es_api_key'); ?>"
-							   onkeypress="return checkAPISection(event);"
-								 onblur="return checkAPISection(event);"/>
+					<td>
+						<input id="custory_api_key_id" name="stori_es_api_key"
+								type="text"
+							  value="<?php echo get_option('stori_es_api_key'); ?>"
+							  onkeypress="return checkAPISection(event);"
+								onblur="return checkAPISection(event);"
+								class="regular-text code" />
 						<img id="process_id_apikey" class="process_check"
-							 src="<?php echo STORI_ES_URL . '/includes/img/process-64.gif' ?>"
-							 alt="process indicator" />
+							  src="<?php echo STORI_ES_URL . '/includes/img/process-64.gif' ?>"
+							  alt="process indicator" />
 						<label id="check_result_apikey" class="check_result"></label>
+					</td>
+				</tr>
+
+				<tr valign="top">
+					<th scope="row">API Cache Timeout (seconds)</th>
+					<td>
+						<input id="stori_es_api_cache_timeout" name="stori_es_api_cache_timeout"
+						    type="number" min="0"
+								value="<?php echo get_option('stori_es_api_cache_timeout'); ?>"
+								class="regular-text code" />
 					</td>
 				</tr>
 			</table>
